# nestling

./: .env.example  .gitignore  README.md  pyproject.toml
nestling/: auth.py  camera.py  main.py  sdm.py
nestling/static/: index.html
nestling/stream/: webrtc.py
tests/: test_auth.py  test_camera_sdp.py  test_pipeline.py
