[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nestling"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiortc",
    "aiohttp",
    "opencv-python",
    "numpy",
]

[project.scripts]
nestling = "nestling.main:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
include = ["nestling*"]

[tool.setuptools.package-data]
nestling = ["static/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
